--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -243,7 +243,6 @@ a:visited{
 
 .button:before {
 	opacity: 0;
-	/*color: #f91791;*/
 	background: #f91791;
 	content: '';
 	position: absolute;
@@ -459,7 +458,6 @@ body > section {
 }
 
 body > section > .holder {
-	/*max-width: 1000px;*/
 	margin: 0 5%;
 }
 
@@ -588,7 +586,6 @@ h4{
 #about {
 	position: relative;
 	padding: 0 0 250px 0;
-	/*min-height: 873px;*/
 }
 
 #about .bg-image {
@@ -600,7 +597,6 @@ h4{
 	height: 300px;
 	background: url("http://i.imgur.com/ifckBKU.png");
 	background-position: -4660px;
-	/*position: absolute;*/
 	margin: auto;
 	margin-top: 50px;
 	top: 0; left: 0; bottom: 0; right: 0;
@@ -746,7 +742,6 @@ h4{
 
 #about .tabs-menu {
 	display: inline-block;
-	/*margin: 50px 0 0 0;*/
 	width: 100%;
 	text-align: center;
 }
@@ -908,9 +903,6 @@ h4{
 	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
-	/*line-height: 1;*/
-
-	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -1188,8 +1180,6 @@ h4{
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-
-	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -1438,25 +1428,17 @@ circle skills
 h3 {
 	color: #fff;
 	text-align: center;
-	/*letter-spacing: 2px;*/
 	font-size: 14px;
-	/*margin: 0 15px;
-	padding: 40px 0 0 0;
-	height: 90px;*/
 	font-family: 'Prata', serif;
-	text-shadow:
-	0 0 1px #fff,
-	0 1px 2px rgba(0,0,0,0.3);
+	text-shadow: 0 0 1px #fff, 0 1px 2px rgba(0,0,0,0.3);
 }
 
 .ch-info p {
 	font-family: 'Arapey', serif;
 	color: #fff;
 	padding: 10px 5px;
-
 	margin: 0 30px;
 	font-size: 20px;
-	/*border-top: 1px solid rgba(255,255,255,0.5);*/
 }
 
 .ch-info p a {
@@ -1486,8 +1468,6 @@ h3 {
 
 .experience .row {
 	margin-top: 30px;
-	/*padding: 0 0 40px 0;*/
-	/*overflow: hidden;*/
 }
 
 .experience .row + .row {
@@ -1499,16 +1479,11 @@ h3 {
 	text-align: center;
 	padding-left: 375px;
 	padding-right: 325px;
-	/*margin: 0 0 0 350px;*/
-	/*margin-left: 100px;
-	margin-right: 100px;*/
 	display: inline-block;
-
 }
 
 .experience .row .brief {
-	/*padding-left: 10px;
-	padding-right: 80px;*/
+
 }
 
 .experience .row .brief .company-name {
@@ -1524,7 +1499,6 @@ h3 {
 	font-family: "Vidaloka", monospace;
 	line-height: 30px;
 	font-size: 24px;
-	/*padding: 10px 0 0 0;*/
 	text-align: left;
 	margin-right: 100px;
 	color: black;
@@ -1534,7 +1508,6 @@ h3 {
 	font-family: "Vidaloka", monospace;
 	line-height: 30px;
 	font-size: 24px;
-	/*padding: 10px 0 0 0;*/
 	text-align: left;
 	margin-right: 100px;
 	color: black;
@@ -1622,7 +1595,6 @@ h3 {
 	font-size: 18px;
 	font-family: "Playfair Display", monospace;
 	font-style: bold;
-	/*font-family: "Vidaloka", monospace;*/
 }
 
 
@@ -1641,7 +1613,6 @@ h3 {
 .logo .ga {
 	background: url("1ga_logo.jpg");
 }
-/*education*/
 
 /*testimonials*/
 
@@ -1650,12 +1621,7 @@ h3 {
 	width: 1000px;
 	margin: 50px;
 }
-/*#testimonials  .testimonial {
-text-align: center;
-line-height: 34px;
-color: #f91791;
-width: 100%;
-}*/
+
 #testimonials  .testimonial .quote {
 	font-family: "Playfair Display", monospace;
 	margin:20px 20px 20px 20px;
@@ -1835,32 +1801,10 @@ width: 100%;
 	opacity: 1;
 }
 
-/*{
-margin:0;
-padding:0;
-border:none;
-list-style:none;
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
-}*/
-/*.project {
-padding: 0;
-margin: 0;
-list-style: none;
-display: -webkit-box;
-display: -moz-box;
-display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
--webkit-flex-flow: row wrap;
-justify-content: space-around;
-}*/
 .gallery_containers {
 	margin-top: 30px;
 	margin: 20px 0 0 0;
 	padding: 0;
-	/*list-style: none;*/
 	display: block;
 	text-align: center;
 	width: 100%;
@@ -1884,7 +1828,6 @@ justify-content: space-around;
 
 .gallery_container img {
 	display: block;
-	/*position: absolute;*/
 	width: 400px;
 	height: 300px;
 }
@@ -2574,24 +2517,9 @@ span6:hover{
 }
 
 #resume .resume {
-	/*font-family: Audrey-Normal;*/
 	line-height: 34px;
 }
 
-/*#resume .resume .quote {
-font-size: 24px;
-padding: 0 0 20px;
-}
-
-#resume .resume .client-info {
-color: #f91791;
-font-size: 17px;
-}*/
-/*#resume .tech{
-border-radius: 100%;
-height: 25px;
-weight:25px;
-}*/
 #resume .tech {
 	margin: 40px 0;
 }
@@ -2968,5 +2896,7 @@ weight:25px;
 					margin-right: 0;
 					margin-left: 0;
 				}
-				#resume img
 			}
+		}
+	}
+}
