more cleaning and html/css validating

--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -1,3 +1,5 @@
 @import url("screen.css");
 @import url("non-screen.css") handheld;
 @import url("non-screen.css") only screen and (max-device-width:640px);
+@import url("http://reset5.googlecode.com/hg/reset.min.css");
+@import url("Audrey-Normal.css");
