--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,6 +1,3 @@
-
-@import url('Audrey-Normal.css');
-
 @font-face {
 	font-family:'Audrey-Normal';
 	src: url('Audrey-Normal_gdi.eot');
@@ -12,18 +9,10 @@
 	font-weight: 400;
 	font-style: normal;
 	font-stretch: normal;
-	unicode-range: U+0020-25CA;
 }
 @font-face {
 	font-family: "Audrey-Normal";
 	src: url("fonts/Audrey-Normal.otf");
-}
-
-@import "compass";
-@import url(http://reset5.googlecode.com/hg/reset.min.css);
-
-* {
-	box-sizing: border-box;
 }
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -39,7 +28,6 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-family: "Abril Fatface";
-	body { padding-top: 70px; }
 }
 
 html {
@@ -130,6 +118,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 	color: #fff;
 	padding-top: 10px;
 	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 	cursor: pointer;
 	transition: .4s;
 	transform-origin: center;
@@ -159,7 +149,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 	color: #fff;
 	transition: 1s;
 	opacity: 0;
-	margin-top: 0px;
 }
 .menu-items div a{
 	color: #fff;
@@ -218,7 +207,20 @@ a:link {
 a:visited{
 	color: #000;
 }
-
+/*.rw-words-box{
+	font-family: "Abril Fatface", serif;
+	color: #f91791;
+	height: 45px;
+	width: 130px;
+	display: inline-block;
+	text-transform: uppercase;
+	position: relative;
+	z-index: 1;
+	overflow: hidden;
+	font-size: 18px;
+	text-align: center;
+	cursor: pointer;
+}*/
 .button {
 	font-family: "Abril Fatface", serif;
 	color: #f91791;
@@ -505,7 +507,7 @@ body > section > .holder > .title h2:after {
 }
 .rw-words-1 span{
 	margin-left: 10px;
-	text-align: left;
+	/*text-align: center;*/
 	font-family: 'Abril Fatface', serif;
 	color: #f91791;
 	position: absolute;
@@ -552,7 +554,7 @@ body > section > .holder > .title h2:after {
 @-ms-keyframes rotateWord {
 	0% { opacity: 0; }
 	2% { opacity: 0; -ms-transform: translateY(-30px); }
-	5% { opacity: 1; -ms-transform: translateY(0px);}
+	5% { opacity: 1; -ms-transform: translateY(0px); }
 	17% { opacity: 1; -ms-transform: translateY(0px); }
 	20% { opacity: 0; -ms-transform: translateY(30px); }
 	80% { opacity: 0; }
