--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100);
+
 @font-face {
 	font-family:'Audrey-Normal';
 	src: url('Audrey-Normal_gdi.eot');
@@ -1451,13 +1453,7 @@ circle skills
 }
 
 /*.ch-info */
-h3 {
-	color: #fff;
-	text-align: center;
-	font-size: 14px;
-	font-family: 'Prata', serif;
-	text-shadow: 0 0 1px #fff, 0 1px 2px rgba(0,0,0,0.3);
-}
+
 
 .ch-info p {
 	font-family: 'Arapey', serif;
@@ -1964,6 +1960,8 @@ border: 1px solid #000;
 	margin-top: 20px;
 }
 
+
+
 .pop1 {
 	display:none;
 	position:fixed;
@@ -2033,12 +2031,12 @@ border: 1px solid #000;
 }
 
 .pop1 > p1 {
-	margin: auto;
-	font-size:20px;
+	margin: 25px;
 	color: #000;
-	font-family: "Playfair Display";
-	font-weight: bold;
-	line-height: 24px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 24px;
+	line-height: 28px;
 }
 
 .pop1 > span1 {
@@ -2153,12 +2151,12 @@ span1:hover{
 }
 
 .pop2 > p1 {
-	margin: auto;
-	font-size:20px;
+	margin: 25px;
 	color: #000;
-	font-family: "Playfair Display";
-	font-weight: bold;
-	line-height: 24px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 24px;
+	line-height: 28px;
 }
 
 
@@ -2273,12 +2271,12 @@ span2:hover{
 }
 
 .pop3 > p1 {
-	margin: auto;
-	font-size:20px;
+	margin: 25px;
 	color: #000;
-	font-family: "Playfair Display";
-	font-weight: bold;
-	line-height: 24px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 24px;
+	line-height: 28px;
 }
 
 .pop3 > span3 {
@@ -2391,12 +2389,12 @@ span3:hover{
 }
 
 .pop4 > p1 {
-	margin: auto;
-	font-size:20px;
+	margin: 25px;
 	color: #000;
-	font-family: "Playfair Display";
-	font-weight: bold;
-	line-height: 24px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 24px;
+	line-height: 28px;
 }
 
 .pop4 > span4 {
@@ -2509,11 +2507,12 @@ span4:hover{
 }
 
 .pop5 > p1 {
-	font-size:20px;
+	margin: 25px;
 	color: #000;
-	font-family: "Playfair Display";
-	font-weight: bold;
-	line-height: 24px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 24px;
+	line-height: 28px;
 }
 
 .pop5 > span5 {
@@ -2627,11 +2626,12 @@ background-size: 0.75em 0.75em;
 }
 
 .pop6 > p1 {
-	font-size:20px;
+	margin: 25px;
 	color: #000;
-	font-family: "Playfair Display";
-	font-weight: bold;
-	line-height: 24px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 24px;
+	line-height: 28px;
 }
 
 .pop6 > span6 {
@@ -2745,11 +2745,12 @@ span6:hover{
 }
 
 .pop7 > p1 {
-	font-size:20px;
+	margin: 25px;
 	color: #000;
-	font-family: "Playfair Display";
-	font-weight: bold;
-	line-height: 24px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 24px;
+	line-height: 28px;
 }
 
 .pop7 > span7 {
@@ -2866,11 +2867,12 @@ span7:hover{
 }
 
 .pop8 > p1 {
-	font-size:20px;
+	margin: 25px;
 	color: #000;
-	font-family: "Playfair Display";
-	font-weight: bold;
-	line-height: 24px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+	font-size: 24px;
+	line-height: 28px;
 }
 
 .pop8 > span8 {
@@ -2899,6 +2901,77 @@ span8:hover{
 	width: 100%;
 	height: 50px;
 }
+
+
+.techUsed {
+  /*position: absolute;*/
+  top: 0;
+  left: 0;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 1.75em;
+  text-align: center;
+  color: #000;
+  -webkit-animation: 3s fade;
+  animation: 3s fade;
+}
+.techUsed p{
+	font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 24px;
+}
+.techUsed h3 {
+  display: inline-block;
+  position: relative;
+  padding: .5em 1em;
+}
+.techUsed h3:before {
+  display: block;
+  content: '';
+  width: 110%;
+  margin-left: -5%;
+  margin-bottom: 5%;
+  border-top: 1px solid #000;
+  -webkit-animation: 2.5s draw;
+  animation: 2.5s draw;
+}
+.techUsed h3:after {
+  display: block;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  border-bottom: 1px solid #000;
+  -webkit-animation: 2.5s draw-bottom;
+  animation: 2.5s draw-bottom;
+}
+@keyframes draw {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 110%;
+  }
+}
+@keyframes draw-bottom {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 
 #resume {
 	background-color: #fff;
